assets/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

body {
  background-image: linear-gradient(to bottom right, #141e30, #243b55);
  color: #f4fffd;
  overflow-x: none;
  font-family: "Poppins", sans-serif;
}

.dark-mode {
  background-image: none;
  background-color: #f5f5f5 !important;
  color: #0e1116;
}

.card {
  transition: 1s;
}

.card:hover {
  transform: scale(1.1);
}

.current {
  color: #41d3bd !important;
  text-decoration: none;
}

.current:hover {
  color: #ded6d6;
}

.home-wrapper {
  background-image: url("https://images.pexels.com/photos/2387793/pexels-photo-2387793.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2") !important;
  background-size: cover;
  background-repeat: no-repeat;
  padding: 5%;
}

.home {
  padding: 20px 20px;
  margin: 10% 10% 0;
  margin-bottom: 25%;
  color: #f5f5f5 !important;
}

#hello {
  font-size: medium;
}

#name {
  font-size: 5em;
  text-transform: uppercase;
}

#intro-bio {
  font-size: 2em;
}

.about-me {
  /* margin: 15% 10%; */
  padding: 7%;
}

.logo {
  height: 75px;
  width: 75px;
  cursor: pointer;
}

.footer-logo {
  height: 75px;
  width: 75px;
  cursor: pointer;
  margin: 0 30%;
}

.selfie {
  height: 400px;
  width: 400px;
  border-radius: 50%;
}

.slideshow {
  height: 600px;
  width: 600px;
}

.project-imgs {
  width: 640px;
  height: 360px;
}

.about-content {
  line-height: 25px;
  word-wrap: normal;
}

.about-content h1 {
  font-size: 5em;
}

.projects {
  padding: 20px 20px;
  margin: 15% 10%;
}

.featured-projects {
  display: inline-block;
  justify-content: center;
  align-items: center;
  transition: opacity 0.1s;
}

.img-fluid {
  max-width: 100%;
  height: auto;
}

.divider {
  border-left: 6px solid white;
  height: 500px;
  margin-right: 14%;
  flex-wrap: wrap;
}

.card {
  color: #0e1116;
}

.socials {
  list-style: none;
  margin-bottom: 10px;
}

.resume {
  margin: 15% 10% 0;
  padding: 10%;
}

.resume-wrapper {
  border-radius: 10px;
  border-color: #ded6d6;
  background-color: #ded6d6;
  color: #0e1116;
  padding: 8px 20px;
  font-size: 1.5em;
}

.resume-link {
  color: #0e1116;
  text-decoration: none;
}

.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: #2196f3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196f3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.fade-in {
  opacity: 0;
  transition: opacity 250ms ease-in;
}

.fade-in.appear {
  opacity: 1;
}

.from-left {
  grid-column: 2 / 3;
  transform: translateX(-50%);
}

.from-right {
  grid-column: 3 / 4;
  transform: translateX(50%);
}

.from-left,
.from-right {
  transition: opacity 250ms ease-in, transfrom 400ms ease-in;
  opacity: 0;
}

.from-left.appear,
.from-right.appear {
  transform: translateX(0);
  opacity: 1;
}

.parallax-one {
  background-color: azure;
  background-image: url("./img/mockup.png");

  height: 100%;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.parallax-two {
  background-color: azure;
  background-image: url("./img/pexels-danny-meneses-943096.jpg");

  height: 100%;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.socials {
  font-size: 2em;
}

.social-links {
  text-decoration: none;
  cursor: pointer;
}

.email {
  border-radius: 10px;
  background-color: #ded6d6;
  color: #0e1116;
  padding: 20px 25px;
  text-decoration: none;
}

.navbar {
  position: fixed;
  transition: all 0.2s ease-in;
  top: 0;
  left: 0;
  right: 0;
  background-image: linear-gradient(to bottom right, #141e30, #243b55);
  z-index: 50;
}

.nav--hidden {
  top: -160px;
}

.more-less-btn {
  padding: 10px 20px;
  border-radius: 10px;
}

.contact-me {
  padding-top: 15%;
}

.list-container {
  list-style: none;
  font-size: 1.5em;
}

.email-contact {
  padding: 5%;
  display: inline-block;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.email-contact h3 {
  margin-bottom: 15%;
}

.contact-info {
  padding: 5%;
  display: inline-block;
  justify-content: center;
  align-items: center;
  text-align: start;
}

.card-title {
  font-size: 20px;
  color: black;
  margin-bottom: 15%;
  text-decoration: none;
}

.underline {
  display: inline-block;
  position: relative;
}

.underline:after {
  content: "";
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #41d3bd;
  color: #41d3bd;
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.underline:hover:after {
  transform: scaleX(1);
  transform-origin: bottom left;
  color: #41d3bd;
}

.archive-link {
  text-decoration: none;
  color: #41d3bd;
  font-size: 1em;
  margin-bottom: 3%;
}

.card-icon {
  font-size: 3.5em;
  white-space: nowrap;
}

